--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,1 +1,6 @@
 server.port=5555
+
+# Database
+spring.datasource.url=jdbc:postgresql://localhost:5432/dyno-market
+spring.datasource.username=postgres
+spring.datasource.password=22339
